# OpenSecKit

./: .gitignore  AUDIT-OSK-WORKFLOW-2025-12-23.md  CHANGELOG.txt  CONTRIBUTING.md  CONTRIBUTING.txt  FAQ.md  FAQ.txt  PLAN-CLI-COMMANDS.md  PLAN-MULTI-AGENT.md  QUICK-START.md  QUICK-START.txt  README-DEV.md  README-DEV.txt  README.md  README.txt  SECURITY.md  agents.toml  constitution.md  index.html  mkdocs.yml  models.json  package.json  registry.toml  requirements-dev.txt
.githooks/: pre-commit
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  link-check-config.json
cli/: Cargo.toml  README.md  README.txt  context.txt  deny.toml
cli/src/: agents.rs  args.rs  config.rs  github.rs  main.rs  memory.rs  prompts.rs  registry.rs  stack.rs
cli/src/commands/: changes.rs  check.rs  id.rs  ingest.rs  init.rs  mod.rs  run.rs  scaffold.rs  scan.rs  update.rs  validate.rs
cli/src/providers/: claude.rs  common.rs  gemini.rs  mod.rs
cli/src/utils/: counter.rs  git.rs  mod.rs  template.rs  yaml.rs
cli/templates/agents/: AGENTS.md.tera  claude-code.tera  cursor.tera  gemini.tera
cli/templates/feature/: hardening.md.tmpl  plan.md.tmpl  requirements.md.tmpl  risks.md.tmpl  tasks.yaml.tmpl  testing.md.tmpl  threats.md.tmpl
config/: agents.toml  registry.toml  requirements-dev.txt
docs/: changelog.md  extending-frameworks.md  index.md  principles.md
domaines/: README.md
prompts/: osk-analyze.md  osk-assess.md  osk-audit-all.md  osk-audit.md  osk-baseline.md  osk-comply-rgpd.md  osk-comply-rgs.md  osk-configure.md  osk-context.md  (+23 more)
(+343 files in other folders)
