[package]
name = "osk"
version = "3.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
walkdir = "2.4"
ignore = "0.4"
dialoguer = "0.11"
toml = "0.8"
dotenv = "0.15"
which = "7.0"
tera = "1.20"
regex = "1.10"
lazy_static = "1.5"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
